js/js.translator/testData/incremental/invalidation/fileNameClashPerFile/main/m.kt
import foo.test1

fun box() = test1()